--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/indexnew.js"
+    "start": "node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dd-trace": "^0.11.0",
     "express": "^4.16.4",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "redis":  "^3.0.0"
   }
 }
